--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
       </p>
     </section>
     <script src="src/thermostat.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="interface.js"></script>
   </body>
 </html>
